Aligning editor call/fire buttons and arrow images. Correctly sandtable app to all for pins and lines to be drawn outside of toolbar html.
git-svn-id: http://svn.virtualworldframework.com/branches/integration@856 775f9103-8eee-4f94-88be-65e0ca6d8b75

--- a/public/sandtable/toolbar.css
+++ b/public/sandtable/toolbar.css
@@ -6,6 +6,7 @@ div.wrapper {
 	width:99%;
 	position:absolute;
 	bottom:30px;
+	pointer-events:none;
 }
 div.toolstyle {
 	border-style:solid;
